syntax = "proto3";

package protobuf.opencb.service;

option java_package = "org.opencb.cellbase.core.grpc.service";
option java_outer_classname = "GenomicRegionServiceModel";

import "protobuf/opencb/service/generic_service.proto";
import "protobuf/opencb/service_types.proto";
import "protobuf/opencb/gene.proto";
import "protobuf/opencb/transcript.proto";
import "protobuf/opencb/variant.proto";
import "protobuf/opencb/regulatory_region.proto";

service GenomicRegionService {

    rpc getGene(Request) returns (stream Gene) {}

    rpc getTranscript(Request) returns (stream Transcript) {}

    rpc getVariation(Request) returns (stream Variant) {}

    rpc getSequence(Request) returns (StringResponse) {}

    rpc getRegulatoryRegion(Request) returns (stream RegulatoryRegion) {}

    rpc getTfbs(Request) returns (stream RegulatoryRegion) {}

    // getClinical

    // TODO getConservation() and create conservation.proto in biodata models
}
